GUI draw, visitor logic implemented